# MAPF-Mechanism

./: .clang-format  .gitignore  CMakeLists.txt  README.md
analysis/: all_payments_hist.py  find_unfinished_runs.py  gen_cost_value.py  partial_ordering_check.py  plot_payment.py  plot_stats_vs_cost_dist.py  plot_stats_vs_n_agents.py  suboptimality.py
custom_scens/: Paris_1_256-my-1.scen  Paris_1_256-my-10.scen  Paris_1_256-my-2.scen  Paris_1_256-my-3.scen  Paris_1_256-my-4.scen  Paris_1_256-my-5.scen  Paris_1_256-my-6.scen  Paris_1_256-my-7.scen  Paris_1_256-my-8.scen  Paris_1_256-my-9.scen  den312d-my-1.scen  den312d-my-10.scen  den312d-my-2.scen  den312d-my-3.scen  den312d-my-4.scen  den312d-my-5.scen  den312d-my-6.scen  den312d-my-7.scen  den312d-my-8.scen  den312d-my-9.scen  den520d-my-1.scen  den520d-my-10.scen  den520d-my-2.scen  den520d-my-3.scen  den520d-my-4.scen  den520d-my-5.scen  den520d-my-6.scen  den520d-my-7.scen  den520d-my-8.scen  den520d-my-9.scen  empty-2-2-my-8.scen  empty-3-3-my-8.scen  empty-4-4-my-1.scen  empty-4-4-my-10.scen  empty-4-4-my-2.scen  empty-4-4-my-3.scen  empty-4-4-my-4.scen  empty-4-4-my-5.scen  empty-4-4-my-6.scen  empty-4-4-my-7.scen  (+28 more)
debug/: CalculatePaymentDebug.cpp
inc/: CBS.h  CBSHeuristic.h  CBSNode.h  Conflict.h  ConstraintPropagation.h  ConstraintTable.h  CorridorReasoning.h  ECBS.h  ECBSNode.h  IDPBS.h  IncrementalPairwiseMutexPropagation.hpp  Instance.h  MDD.h  MutexReasoning.h  PBS.h  PBSNode.h  PP.h  PathTable.h  RectangleReasoning.h  ReservationTable.h  SIPP.h  SingleAgentSolver.h  SpaceTimeAStar.h  common.h
(+295 files in other folders)
